# redicon-dune-immo

./: CMakeLists.txt  Makefile.in  README  aclocal.m4  config.h.cmake  config.h.in  configure  configure.ac  dependencies.m4  dune-channeling.pc.in  dune-immo.pc.in  dune.module
cmake/: Makefile.in
cmake/modules/: CMakeLists.txt  Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in
doc/doxygen/: Doxyfile.in  Makefile.in
doc/doxygen/html/: a00001.html  a00001_source.html  dir_2cc25794e3639b5cbff4c04e685e9c36.html  dir_5e69be5995c9f5d42bf491ae6f29600e.html  files.html  globals.html  globals_defs.html  index.html
dune/: CMakeLists.txt  Makefile.am  Makefile.in
dune/channeling/: CMakeLists.txt  Makefile.am  Makefile.in  channeling.hh
dune/immo/: CMakeLists.txt  Makefile.am  Makefile.in
m4/: CMakeLists.txt  Makefile.am  Makefile.in  dune-channeling.m4  dune-immo.m4
src/: CMakeLists.txt  Makefile.am  Makefile.in  boundary-dirichelt.hh  boundary-robin.hh  bridge-entityFunction.hh  bridge-forces.hh  bridge-robinBC.hh  bridge.hh  immoplate-bridge.cc  immoplate.cc
src/lib/: assembleMatrix.hh  assembleVector.hh  calcSurfArea.hh  diracDelta.hh  entityFunction.hh  entityFunction2.hh  evalField.hh  gamma.hh  index.hh  insideEntity.hh  integrateEntity.hh  integrateEntityDynamic.hh  integrateField.hh  integrate_n.hh  laplacian.hh  pointSource.hh  saveField.hh  saveField2.hh  setDirichlet.hh  setRobin.hh  shapeFunctions.hh  sourceFunctions.hh  updateMatrix.hh
src/tests/: Makefile.am  Makefile.in  testBridge.cc  testBridgeForce.cc
